# spotify-liked-songs-downloader

./: .gitignore  README.md  example-run-spotify.sh  main.py  pyproject.toml
src/: downloader.py  local.py
src/lyrics/: __init__.py  api.py  lrclib.py
src/metadata/: __init__.py  image_downloader.py  tags_embedder.py
src/spotify/: __init__.py  spotify.py  spotify_song.py  utils.py
src/youtube/: __init__.py  download.py  search.py  youtube_song.py
